Ver 3.2 Fixed LOTS of bugs. implemented the undo history. added the remaining comments.
Signed-off-by: Danial Baharvand <dbdpcg@gmail.com>